variabloes de entorno apuntando a produccion

--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ PORT=3006
 ENTIDAD_TABLE=Entidad
 LISTA_PRECIOS_DET = ListaPrecioDet
 LISTA_PRECIOS = ListaPrecio
+DESARROLLO = 3d137dea1d13220aa9a10ee57d69f6b30d247f28
+DEV_ACCES =  HOMOLOGATION
+PRODUCCION = 588b56a33c722da5e49170a311e872d9ee967291
+PROD_ACCES = PRODUCTION
